# MISO2

./: .buildinfo  .gitignore  CHANGELOG.md  README.md  environment.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/background/: about.doctree  data.doctree  enduses.doctree  software_architecture.doctree  system_definition.doctree  uncertainty_parametrisation.doctree
.doctrees/database/: database.doctree
.doctrees/modules/: API_reference.doctree  MISO2_checks.doctree  MISO2_config.doctree  MISO2_database.doctree  (+16 more)
_sources/: index.rst.txt
background/: about.html  data.html  enduses.html  software_architecture.html  system_definition.html  uncertainty_parametrisation.html
database/: database.html
logs/: .gitignore
modules/: API_reference.html  MISO2_checks.html  MISO2_config.html  MISO2_database.html  MISO2_exceptions.html  MISO2_file_manager.html  MISO2_functions.html  MISO2_logger.html  MISO2_model.html  MISO2_model_data.html  MISO2_monte_carlo.html  MISO2_multiprocessing.html  MISO2_output.html  MISO2_preprocessing.html  MISO2_stats.html  MISO2_survival_functions.html  MISO2_system_definitions.html  ODYM_classes.html  ODYM_functions.html  dynamic_stock_model.html
notebooks/: MISO2_01_create_config.html  MISO2_01_create_config.ipynb  MISO2_02_run_model.html  MISO2_02_run_model.ipynb  MISO2_03_working_with_results.html  MISO2_uncertainty_distributions.html
setup/: setup.html
src/: .pylintrc
usage/: usage.html
(+149 files in other folders)
